Portage 1.6.8, released 12 Sep 2001
===================================

	*portage.py
	movefile() will now unlink() destfile if it is a symlink.  Should fix 
	problems where file gets created at symlink target rather than replacing
	the symlink.

	*queryhost.sh (agriffis)
	Parallel pinging and other fixes.

Portage 1.6.7, released 05 Sep 2001
===================================

	*portage.py
	(last-minute fix)
	CONFIG_PROTECT unmerge protection is now observed for symlinks, fifos and
	device nodes.
	
	*portage.py
	Fixes for unmerging CONFIG_PROTECTed files.  Protected files are now *not*
	unlinked from the filesystem.  Messier but safer, and simplifies package
	upgrades.

	*emerge
	Emerge output cleanups for GNU info directory generation.  New --verbose
	mode; new CONFIG_PROTECT scanning feature to let people know when there are
	config files to be updated.  New "--help config" docs to explain how to
	do it.

Portage 1.6.6, released 01 Sep 2001
====================================

	*portage.py
	Upgraded directory merging over existing objects.  Existing symlinks that
	point to existing directories will be kept and used as is; directories will
	be used as-is; any other objects (broken symlinks, files) will be copied
	to origfilename.backup and a ne directory will be created in its place.

Portage 1.6.5, released 31 Aug 2001
====================================
	
	*emerge 
	Fixes for handling multiple ebuilds, packages and/or dependencies on
	the command-line.

	*portage.py 
	An optimization to the digraph class so that the firstzero() method finds
	matches in close to the order that keys were added to the digraph.